      and the INSTALL file for details.
    - Added VolumeRayIntersector::hits(), which returns all the hit segments 
      along a ray.  This is generally more efficient than repeated calls
      to VolumeRayIntersector::march().
    - Added member class Ray::TimeSpan and method Ray::valid(), and 
      deprecated method Ray::test(). 
    - Added tools::compositeToDense(), which composites data from a
      sparse tree into a dense array, using a sparse alpha mask.
      Over, Add, Sub, Min, Max, Mult, and Set are supported operations.
    - Added tools::transformDense(), which applies a functor to the value
      of each voxel of a dense grid within a given bounding box.

    API changes:
    - Collected the digital differential analyzer code from math/Ray.h
      and tools/RayIntersector.h into a new header file, math/DDA.h.
    - Rewrote VolumeHDDA and made several changes to its API.  (VolumeHDDA
      is used internally by VolumeRayIntersector, whose API is unchanged.)
    - Tree::combine2(), RootNode::combine2(), InternalNode::combine2(),
      LeafNode::combine2() and CombineArgs all now require an additional
      template argument, which determines the type of the other tree.
    - Assignment operators for LeafManager::LeafRange::Iterator,
      BaseMaskIterator, NodeMask and RootNodeMask now return references
      to the respective objects.
    - Removed a number of methods that were deprecated in version 2.0.0
      or earlier.

    Houdini:
    - Added a Clip SOP, which does volumetric clipping. 
    - Added an Occlusion Mask SOP, which generates a mask of the voxels
      inside a camera frustum that are occluded by objects in an input grid.

Version 2.2.0 - February 20, 2014
    - Added a simple, multithreaded volume renderer, and added volume
      rendering support to the vdb_render command-line renderer.
    - Added an option to the LevelSetRayIntersector and to vdb_render
      to specify the isovalue of the level set.