@@ -35,9 +35,9 @@
 #include <tbb/blocked_range3d.h>
 #include <tbb/blocked_range2d.h>
 #include <tbb/blocked_range.h>
-#include <openvdb/tools/Dense.h>
+#include <openvdb/Types.h>
 #include <openvdb/tree/LeafManager.h>
-//#include <openvdb/openvdb.h>
+#include "Dense.h"
 
 
 namespace openvdb {
