@@ -1326,12 +1326,15 @@ TestTools::testPointAdvect()
 ////////////////////////////////////////
 
 
-struct PointList
-{
-    struct Point { double x,y,z; };
-    std::vector<Point> list;
-    void add(const openvdb::Vec3d &p) { Point q={p[0],p[1],p[2]}; list.push_back(q); }
-};
+namespace {
+    
+    struct PointList
+    {
+        struct Point { double x,y,z; };
+        std::vector<Point> list;
+        void add(const openvdb::Vec3d &p) { Point q={p[0],p[1],p[2]}; list.push_back(q); }
+    };
+}
 
 
 void
